@@ -327,7 +327,7 @@
       <applyto>/apps/gnomemeeting/general/h245_tunneling</applyto>
       <owner>GnomeMeeting</owner>
       <type>bool</type>
-      <default>false</default>
+      <default>true</default>
       <locale name="C">
 	<short>H.245 Tunnelling</short>
 	<long>If enabled, calls will be established with H.245 Tunnelling.</long>
@@ -338,7 +338,7 @@
       <applyto>/apps/gnomemeeting/general/fast_start</applyto>
       <owner>GnomeMeeting</owner>
       <type>bool</type>
-      <default>true</default>
+      <default>false</default>
       <locale name="C">
 	<short>Fast Start</short>
 	<long>If enabled, calls will be established in Fast Start mode.</long>
