@@ -2,6 +2,16 @@
 
 	* configure.in: Incremented SCHEMA_AGE.
 	
+	* gnomemeeting.schemas.in.in: Fast start = false by default
+	and tunneling = true.
+	
+	* src/main_window.cpp: Change Fast Start and Tunneling to new
+	default values.
+	
+2002-12-31 Damien Sandras  <dsandras@seconix.com>
+
+	* configure.in: Incremented SCHEMA_AGE.
+	
 	* gnomemeeting.schemas.in.in: Added keys for audio player and audio
 	recorder mixers.
 	
